2009-11-24  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Eric Seidel.

        Add ENABLE_SHARED_SCRIPT feature define and flag for build-webkit
        https://bugs.webkit.org/show_bug.cgi?id=31444

        * Scripts/build-webkit:

2009-11-24  Chris Marrin  <cmarrin@apple.com>

        Reviewed by Simon Fraser.

        Changes the way 3D_RENDERING and ACCELERATED_COMPOSITING related tests are excluded
        https://bugs.webkit.org/show_bug.cgi?id=27314
        
        Now the script allows the directories with these tests to be included on all
        platforms but Mac, where they behave the same as always. For all other platforms
        the tests need to be excluded using the Skipped files, which is currently done
        for all platforms (including win since we're not turned on yet)

        * Scripts/webkitdirs.pm:

2009-11-24  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        queries_unittest.py should test command output
        https://bugs.webkit.org/show_bug.cgi?id=31845

        * Scripts/modules/commands/queries_unittest.py:
         - Capture stdout and stderr and compare with expected strings.

2009-11-24  Simon Fraser  <simon.fraser@apple.com>

        No Review.

        Fix spelling error ("depenedencies").

        * Scripts/build-webkit:

2009-11-24  Mark Rowe  <mrowe@apple.com>

        Land the configuration that includes the two debug GTK Linux builders.

        * BuildSlaveSupport/build.webkit.org-config/config.json:

2009-11-24  David Kilzer  <ddkilzer@apple.com>

        <http://webkit.org/b/31840> bisect-builds broke after r50080

        Reviewed by Dan Bernstein.

        * Scripts/bisect-builds:
        (mountAndRunNightly): Switched back to using backticks to run
        the hdiutil command since exec() will terminate the existing
        script, which is not what we want.  Store the output of
        File::Spec->devnull() in a variable for use in the hdiutil
        detach commands.
